# koan

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  koan.cpp
koan/: cli.h  def.h  indexmap.h  reader.h  sample.h  sigmoid.h  timer.h  trainer.h  util.h
tests/: test_gradcheck.cpp  test_utils.cpp
